--- a/index.html
+++ b/index.html
@@ -112,6 +112,37 @@
                         <li class="list-group-item">3,0 KM</li>
                 </div> 
             </div>   
+
+            <h5 class="naziv" id="Flaširano_pivo">Flaširano pivo</h5>
+            <div class="row row-cols-2 g-4 justify-content-center">
+                <div class="col" style="min-width: 200px;">
+                    <ul class="list-group list-group-flush" style="min-width: 200px;"> 
+                        <li class="list-group-item">Sarajevsko</li>
+                        <li class="list-group-item">Ožujsko</li>
+                        <li class="list-group-item">Staropramen</li>
+                        <li class="list-group-item">Nikšićko</li>
+                        <li class="list-group-item">Tomislav</li>
+                        <li class="list-group-item">Tuborg</li>
+                        <li class="list-group-item">Beck's</li>
+                        <li class="list-group-item">Franziskaner</li>
+                        <li class="list-group-item">Blanc</li>
+                        <li class="list-group-item">Sefte</li>
+
+                </div>
+                <div class="col2" style="max-width: 140px;">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">3,0 KM</li>
+                        <li class="list-group-item">3,0 KM</li>
+                        <li class="list-group-item">3,0 KM</li>
+                        <li class="list-group-item">3,0 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">3,5 KM</li>
+                        <li class="list-group-item">3,5 KM</li>
+                        <li class="list-group-item">5,0 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">3,0 KM</li>
+
+        
         <h5 class="naziv" id="Žestoka">Žestoka pića</h5>
             <div class="row row-cols-2 g-4 justify-content-center">
                 <div class="col" style="min-width: 200px;">
