--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
                         <li class="list-group-item">4,0 KM</li>
                         <li class="list-group-item">3,0 KM</li>
 
-        
+                    </div>
+                </div>
         <h5 class="naziv" id="Žestoka">Žestoka pića</h5>
             <div class="row row-cols-2 g-4 justify-content-center">
                 <div class="col" style="min-width: 200px;">
