--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                 <div class="col" style="min-width: 200px;">
                     <ul class="list-group list-group-flush" style="min-width: 200px;">  
                         <li class="list-group-item">Espresso</li>
+                        <li class="list-group-item">Mali macchiato</li>
+                        <li class="list-group-item">Veliki macchiato</li>
                         <li class="list-group-item">Capuccino</li>
                         <li class="list-group-item">Nescaffe</li>
                         <li class="list-group-item">Topla čokolada</li>
@@ -60,6 +62,8 @@
                 <div class="col2" style="max-width: 140px;">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">1,5 KM</li>
+                        <li class="list-group-item">1,5 KM</li>
+                        <li class="list-group-item">2,0 KM</li>
                         <li class="list-group-item">2,5 KM</li>
                         <li class="list-group-item">2,0 KM</li>
                         <li class="list-group-item">3,0 KM</li>
@@ -95,6 +99,8 @@
                     <li class="list-group-item">3,0 KM</li>
                     <li class="list-group-item">5,0 KM</li>
                     <li class="list-group-item">3,0 KM</li>
+                    <li class="list-group-item">3,0 KM</li>
+
 
             </div>
         </div>  
@@ -102,7 +108,7 @@
             <div class="row row-cols-2 g-4 justify-content-center">
                 <div class="col" style="min-width: 200px;">
                     <ul class="list-group list-group-flush" style="min-width: 200px;"> 
-                        <li class="list-group-item">Ožujsko 0,30l</li>
+                        <li class="list-group-item">Ožujsko 0,33l</li>
                         <li class="list-group-item">Ožujsko 0,50l</li>
 
                 </div>
