--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <body>
     <div class="container">
         <h1> Jezik/Language:</h1>
-        <h1><a href="/index.html"><img src="BIH3.png" alt="Bosanski" style="width: 40px;"></a>    
-            <a href="/vikingmenueng.html"><img src="UK3.png" alt="English" style="width: 40px;"></a></h1>
+        <h1><a href="index.html"><img src="BIH3.png" alt="Bosanski" style="width: 40px;"></a>    
+            <a href="johnnymenueng.html"><img src="UK3.png" alt="English" style="width: 40px;"></a></h1>
         <div class="row">
             <img class="img-fluid rounded mx-auto d-block" src="JL1.png" alt="" style="width: max-content; max-width: 800px; margin-top: 3px;">
         </div>
