--- a/index.html
+++ b/index.html
@@ -110,12 +110,15 @@
                     <ul class="list-group list-group-flush" style="min-width: 200px;"> 
                         <li class="list-group-item">Ožujsko 0,33l</li>
                         <li class="list-group-item">Ožujsko 0,50l</li>
+                        <li class="list-group-item">Ožujsko 1,00l</li>
 
                 </div>
                 <div class="col2" style="max-width: 140px;">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">2,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
+                        <li class="list-group-item">2,5 KM</li>
+                        <li class="list-group-item">3,5 KM</li>
+                        <li class="list-group-item">7,0 KM</li>
+
                 </div> 
             </div>   
 
