--- a/johnnymenueng.html
+++ b/johnnymenueng.html
@@ -99,7 +99,7 @@
                     <li class="list-group-item">2,5 KM</li>
                     <li class="list-group-item">3,0 KM</li>
                     <li class="list-group-item">5,0 KM</li>
-                    <li class="list-group-item">2,5 KM</li>
+                    <li class="list-group-item">3,0 KM</li>
 
 
             </div>
@@ -110,12 +110,15 @@
                     <ul class="list-group list-group-flush" style="min-width: 200px;"> 
                         <li class="list-group-item">Ožujsko 0,33l</li>
                         <li class="list-group-item">Ožujsko 0,50l</li>
+                        <li class="list-group-item">Ožujsko 1,00l</li>
 
                 </div>
                 <div class="col2" style="max-width: 140px;">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">2,0 KM</li>
                         <li class="list-group-item">3,0 KM</li>
+                        <li class="list-group-item">3,0 KM</li>
+
                 </div> 
             </div>   
 
@@ -137,16 +140,16 @@
                 </div>
                 <div class="col2" style="max-width: 140px;">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">3,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
+                        <li class="list-group-item">3,5 KM</li>
+                        <li class="list-group-item">3,5 KM</li>
                         <li class="list-group-item">4,0 KM</li>
-                        <li class="list-group-item">3,5 KM</li>
-                        <li class="list-group-item">3,5 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">5,0 KM</li>
                         <li class="list-group-item">5,0 KM</li>
                         <li class="list-group-item">4,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
 
                     </div>
                 </div>
@@ -176,25 +179,25 @@
                 </div>
                 <div class="col2" style="max-width: 140px;">
                     <ul class="list-group list-group-flush">
+                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
                         <li class="list-group-item">3,0 KM</li>
                         <li class="list-group-item">3,0 KM</li>
                         <li class="list-group-item">3,0 KM</li>
                         <li class="list-group-item">3,0 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
                         <li class="list-group-item">3,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">5,0 KM</li>
                         <li class="list-group-item">6,0 KM</li>
-                        <li class="list-group-item">4,0 KM</li>
-                        <li class="list-group-item">4,0 KM</li>
+                        <li class="list-group-item">5,0 KM</li>
+                        <li class="list-group-item">5,0 KM</li>
                 </div> 
             </div>
         <h5 class="naziv" id="Vino">Wine</h5>
@@ -206,7 +209,7 @@
                 </div>
                 <div class="col2" style="max-width: 140px;">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">3,0 KM</li>
+                        <li class="list-group-item">3,5 KM</li>
                     </div> 
             </div>
 
@@ -221,8 +224,8 @@
                 <div class="col2" style="max-width: 140px;">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">4,0 KM</li>
-                        <li class="list-group-item">4,0 KM</li>
-                        <li class="list-group-item">3,0 KM</li>
+                        <li class="list-group-item">5,0 KM </li>
+                        <li class="list-group-item">3,5 KM </li>
                 </div> 
             </div>
             
@@ -234,7 +237,7 @@
                 </div>
                 <div class="col2" style="max-width: 140px;">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">2,5 KM</li>
+                        <li class="list-group-item">3,0 KM</li>
                 </div> 
             </div>
 
